Fix the width of the images on mobile

--- a/styles.css
+++ b/styles.css
@@ -1233,7 +1233,7 @@ footer img {
 
   .provide-list .end-benefits img,
   .provide-list .middle-benefit img {
-    width: 100vw;
+    width: 70vw;
     display: block;
   }
 
